# django-quickstart

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.nullstone/: config.yml
app/: settings.py
mysite/: settings.py
