[tool.poetry]
name = "django-quickstart"
version = "0.1.0"
description = "Django Quickstart for Nullstone"
authors = ["Brad Sickles <brad.sickles@nullstone.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
